CHANGES.txt - 2016-01-02
------------------------

CHANGES IN HTMLDOC v1.8.29

    CHANGES

	- Updated local PNG library to version 1.6.20.
	- Updated local JPEG library to version 9b.
	- Added configure script support for libjpeg-turbo.
	- Updated HTTP code to latest CUPS/ippsample sources.

    BUG FIXES

	- Fixed reported build issues (Bug #500, Bug #507, Bug #510, Bug #533)
	- The configure script's --enable-local* options did not work.


CHANGES IN HTMLDOC v1.8.28

    CHANGES

	- Updated local zlib to version 1.2.8.
	- Updated local PNG library to version 1.6.8.
	- Updated local JPEG library to version 9.
	- Updated default PDF version to 1.4.

    BUG FIXES

	- SECURITY: Fixed three buffer overflow issues when reading AFM files
	  and parsing page sizes.
	- Fixed incompatibility with Fortify's version of strcpy, which does
	  not work properly with variable-length arrays (STR #235)
	- Fixed compilation against PNG library 1.5 or later (STR #243)
	- Fixed documentation errors (PR #6593, PR #6595)
	- Marked Zapf-Dingbats as a standard font (STR #198)
	- Fixed GPL license text in GUI (STR #222)
	- Fixed a table formatting problem when a column has multiple colspan
	  values (PR #6709)
	- Fixed parsing of HTML comments (STR #181)
	- Fixed potential out-of-bounds read in table-of-contents rendering
	  code (STR #183)
        - Fixed handling of image URLs with ampersands in them (STR #186)
	- Fixed top/bottom margins for logo and header/footer images (STR #174)
	- Fixed image alignment bug (Bug #231)
	- Fixed X11 build problem (Bug #243)


CHANGES IN HTMLDOC v1.8.27

    BUG FIXES

	- Fixed a crash bug that appeared when more than 10 blank
	  pages were present in a document (PR #6223)
	- Color changes were not reflected in PRE text (STR #129)
	- Remote URLs did not always work on older operating
	  systems (PR #6179)
	- Image filenames using % escapes were not decoded
	  properly.
	- Rows using BGCOLOR that spanned across multiple pages